alignment fixes

--- a/app/assets/stylesheets/adverts.scss
+++ b/app/assets/stylesheets/adverts.scss
@@ -5,9 +5,10 @@
 .textarea-themed {
   box-shadow: none;
   zbackground-color: white;
-  border: 0px solid #939393;
+  border: 0px solid rgba(0,0,0,0);
+  outline: 0px;
   border-radius: 0px;
-  zbox-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  zbox-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.045);
   zpadding: 0.25em 0.5em;
   zpadding-bottom: 6px;
   zpadding-left: 12px;
@@ -26,7 +27,7 @@
   zbackground-color: white;
   border: 0px solid #939393;
   border-radius: 0px;
-  zbox-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  zbox-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.045);
   zpadding: 0.25em 0.5em;
   zpadding-bottom: 6px;
   zpadding-left: 12px;
@@ -46,7 +47,7 @@
   box-shadow: none;
   background-color: white;
   zborder: 1px solid #CCC;
-  border: 2px solid #939393;
+  border: 1px solid #939393;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 0px;
@@ -73,7 +74,7 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 0px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.045);
   zpadding: 0.25em 0.5em;
   padding-bottom: 6px;
   padding-left: 12px;
@@ -88,6 +89,10 @@
   display: inline-block;
 }
 
+
+.w100pc {
+  width: 100%;
+}
 
 .w550 {
   width: 550px;
